recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.error
DragonCurve1:9: error: not enough arguments for method dragon: (order: Int, x: Double, y: Double, z: Double, t: Double)Unit.
Unspecified value parameter t.
		dragon(x,y,u,v)
                      ^DragonCurve1:10: error: not enough arguments for method dragon: (order: Int, x: Double, y: Double, z: Double, t: Double)Unit.
Unspecified value parameter t.
		dragon(u,v,z,t)
                      ^